commit 4e34fac6538a4510b10ad70003689488d53f55d3
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Tue Nov 27 12:35:50 2012 -0500

    Testing and changing values according to test results

commit 62672467c8ed11b118e1317ee8e22896a8c9db69
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Mon Nov 26 15:30:12 2012 -0500

    Final javadoc and software architecture

commit b1e94a39887d7f1942141a592986043d4ec8c636
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Sat Nov 24 16:43:16 2012 -0500

    Backup. Behaviors work, need improving/some fixes

commit ee12ff955a7cc4ac954883dab7534766d73ea54e
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Fri Nov 23 16:14:48 2012 -0500

    Backup

commit 5d58bdea46e298bd51e9db8600aebcf6871c0ca6
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Thu Nov 22 17:50:51 2012 -0500

    Improved behaviors

commit 11e29583aa4598042e9e07e8976393d1087575ab
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Wed Nov 21 15:34:40 2012 -0500

    Added ExitFieldBehavior

commit 6239eebdc780ab6ef61024fc63ca7da1ac3cf09f
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Wed Nov 21 14:11:07 2012 -0500

    Switched to behavior programming

commit b8c62336d81028bede501bdedf0cd650b4d5c5e5
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Wed Nov 21 09:45:10 2012 -0500

    Changes made by Jeffrey

commit 74e7c7ad3fb8a4513d2d5cc322242782231b9d83
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Mon Nov 19 12:22:07 2012 -0500

    Centralized sensors initializations and fixed Test

commit 34a4d3230eb8b16dcd00e01dc7974947cabb51cd
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Thu Nov 15 16:48:41 2012 -0500

    Added localization to BTListen

commit 7a68a5ac0111a6fd360799a95351bb7ba8f297a7
Author: NatsumiHoshino <antoine.tu@mail.mcgill.ca>
Date:   Thu Nov 15 16:42:41 2012 -0500

    Temporary fix for forcing the clamp to open wide for the beacon
