@@ -14,6 +14,7 @@ import lejos.util.Timer;
 public class BeaconSweepBehavior implements Behavior, TimerListener {
 	//private static final int SCAN_PERIOD = 45 * 1000;
 	private static  boolean SCANNING = false;
+	protected static boolean scanOnce = false;
 	
 	private boolean timedOut = true;
 	
@@ -22,11 +23,15 @@ public class BeaconSweepBehavior implements Behavior, TimerListener {
 		timer.start();
 	}
 	
+	public BeaconSweepBehavior(int period, boolean scanOnce) {
+		Timer timer = new Timer(period * 1000, this);
+		timer.start();
+	}
+	
 	@Override
 	public void action() {
 		timedOut = false;
 		SCANNING = true;
-		
 		Role.beaconLocalizer.doSearchBehavior();
 		
 		timedOut = false;
